create github pages

--- a/application.html
+++ b/application.html
@@ -35,7 +35,7 @@
 
                     <h1 class="mbr-section-title display-1">One Application<br>with unlimited possibilities</h1>
                     <p class="mbr-section-lead lead">Via integration with the World Wind environment, this client can provide relevant geospatial web service standards including WMS, WFS, and WCS (e.g., via getting information and capabilities, rendering visualizations, providing data results), focused on marine traffic and climate oriented datasets. The client includes three major modules: data management, visualization module, and analytical module.&nbsp;<br>The overall design of the client GUI is user friendly yet powerful. This interface component enables user manipulation of datasets, classification and analysis functions, and information and visualization outputs. Users, in addition, are provided with standard zoom, pan, adjusting, and data locating tools, all in two and three dimensions.&nbsp;<br></p>
-                    
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="application.html#msg-box4-1">View Demonstration</a> </div>
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section" id="msg-box4-1" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section" id="msg-box4-1" style="background-color: rgb(242, 242, 242); padding-top: 120px; padding-bottom: 120px;">
 
     
     <div class="container">
